--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -10,6 +10,7 @@
 
 .section-title-wrapper {
 	position: relative;
+	background: radial-gradient(#5f958f, #15253d) !important;
 	padding: rem(124) 0;
 	margin: rem(-2) 0;
 
