--- a/src/scss/base/typography.scss
+++ b/src/scss/base/typography.scss
@@ -9,7 +9,7 @@
 .section-title {
 	@extend .title-font;
 
-	@include adaptiveValue("font-size", 40, 28, 0, $maxWidthContainer, 375);
+	@include adaptiveValue('font-size', 40, 28, 0, $maxWidthContainer, 375);
 	font-weight: 700;
 	line-height: normal;
 }
