--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -193,8 +193,14 @@
 	}
 
 	&__columns {
-		display: flex;
+		display: grid;
 		justify-content: space-between;
+		grid-template-columns: repeat(3, 1fr);
+
+		@media (max-width: em(1480)) {
+			display: flex;
+		}
+
 		@media (min-width: $mobile) {
 			flex-wrap: wrap;
 		}
