--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -125,6 +125,8 @@
 
 		max-width: rem(1120);
 		margin: 0 auto;
+
+		animation: slide-right 0.6s ease-in-out;
 	}
 
 	&__text {
@@ -134,6 +136,8 @@
 
 		max-width: rem(620);
 		margin: 0 auto;
+
+		animation: slide-left 0.6s ease-in-out;
 	}
 
 	&__actions {
@@ -143,6 +147,8 @@
 		&:not(:last-child) {
 			margin-bottom: rem(4);
 		}
+
+		animation: slide-right 0.6s ease-in-out;
 	}
 
 	&__button {
@@ -215,6 +221,30 @@
 		&:hover {
 			transform: rotate(360deg);
 		}
+	}
+}
+
+@keyframes slide-right {
+	from {
+		opacity: 0;
+		transform: translateX(100%);
+	}
+
+	to {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+
+@keyframes slide-left {
+	from {
+		opacity: 0;
+		transform: translateX(-100%);
+	}
+
+	to {
+		opacity: 1;
+		transform: translateX(0);
 	}
 }
 
