--- a/css/style.css
+++ b/css/style.css
@@ -1656,6 +1656,7 @@ h6 {
 }
 
 .feedback__user-avatar {
+  position: relative;
   -webkit-box-flex: 0;
       -ms-flex: 0 0 7rem;
           flex: 0 0 7rem;
@@ -1663,6 +1664,16 @@ h6 {
   height: 7rem;
   border-radius: 50%;
   overflow: hidden;
+}
+
+.feedback__user-avatar img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .feedback__user-name {
